# My_Calc_using_Cmake

./: CMakeLists.txt  README.md
includes/: operation.h
src/: calc.cpp  operation.cpp
